<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/canceldeposit_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/canceldeposit_title_heightsize"
        android:background="@color/canceldeposit_title_bg"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/canceldeposit_title_left_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="9"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/canceldeposit_title_left_string"
            android:textSize="@dimen/canceldeposit_title_fontsize" />
        
        
          <TextView
              android:id="@+id/canceldeposit_title_center_textview"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical|center_horizontal|center"
              android:layout_weight="9"
              android:gravity="center_vertical|center_horizontal|center"
              android:text="@string/canceldeposit_title_center_string"
              android:textSize="@dimen/canceldeposit_title_fontsize" />
          
        
            <TextView
                android:id="@+id/canceldeposit_title_right_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="6"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/canceldeposit_title_right_string"
                android:textSize="@dimen/canceldeposit_title_fontsize" />
        
            <TextView
                android:id="@+id/canceldeposit_title_empty_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="8"
                android:gravity="center_vertical|center_horizontal|center"
                android:textSize="@dimen/canceldeposit_title_fontsize" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/canceldeposit_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>


</LinearLayout>
