<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/allearning_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/allearning_title_heightsize"
        android:background="@color/allearning_title_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/allearning_title_left_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="95"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/allearning_title_left_string"
            android:textSize="@dimen/allearning_title_fontsize" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/allearning_divideline_bg" >
        </LinearLayout>

        <TextView
            android:id="@+id/allearning_title_center_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="123"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/allearning_title_center_string"
            android:textSize="@dimen/allearning_title_fontsize" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/allearning_divideline_bg" >
        </LinearLayout>

        <TextView
            android:id="@+id/allearning_title_right_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="100"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/allearning_title_right_string"
            android:textSize="@dimen/allearning_title_fontsize" />
    </LinearLayout>

    <com.guosen.pageandrefreshlistview.PageAndRefreshListView
        android:id="@+id/demo_page_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="#f1f1f1"
        android:dividerHeight="0.5dip"
        android:fadingEdge="none"
        android:fadingEdgeLength="0px"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:scrollingCache="false" />

</LinearLayout>