<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/productearning_title_rl"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/productearning_title_heightsize"
        android:background="@color/productearning_title_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/productearning_title_left_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="95"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/productearning_title_left_string"
            android:textSize="@dimen/productearning_title_fontsize" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/productearning_divideline_bg" >
        </LinearLayout>

        <TextView
            android:id="@+id/productearning_title_center_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="100"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/productearning_title_center_string"
            android:textSize="@dimen/productearning_title_fontsize" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/productearning_divideline_bg" >
        </LinearLayout>

        <TextView
            android:id="@+id/productearning_title_right_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="123"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/productearning_title_right_string"
            android:textSize="@dimen/productearning_title_fontsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/productearning_refresh_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <ListView
            android:id="@+id/productearning_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:divider="#D2D2D2"
            android:dividerHeight="1dp" />
         </LinearLayout>
        

</LinearLayout>