<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_deposit_bg" >

    <LinearLayout
        android:id="@+id/acrivity_depositsuccess_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/acrivity_depositsuccess_ll1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_depositsuccess_firstmargin"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/activity_depositsuccess_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="@dimen/activity_depositsuccess_betweentitleandimage"
                android:src="@drawable/yes" >
            </ImageView>

            <RelativeLayout
                android:id="@+id/acrivity_depositsuccess_rl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center" >

                <TextView
                    android:id="@+id/activity_depositsuccess_depositmoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:gravity="center"
                    android:text="@string/activity_depositsuccess_depositmoney"
                    android:textSize="@dimen/activity_depositsuccess_protol_fontsize" >

                </TextView>

                <TextView
                    android:id="@+id/activity_depositsuccess_depositmoney_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:layout_toRightOf="@id/activity_depositsuccess_depositmoney"
                    android:text="400,000,000.00"
                    android:textColor="@color/activity_depositsuccess_item_redfont"
                    android:textSize="@dimen/activity_depositsuccess_protol_fontsize" >

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/acrivity_depositsuccess_ll3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center" >

                <TextView
                    android:id="@+id/activity_depositsuccess_dayofincome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:text="@string/activity_depositsuccess_dayofincome"
                    android:textSize="@dimen/activity_depositsuccess_protol_fontsize" >

                </TextView>

                <TextView
                    android:id="@+id/activity_depositsuccess_dayofincome_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_toRightOf="@id/activity_depositsuccess_dayofincome"
                    android:text="2015年5月11日"
                    android:textSize="@dimen/activity_depositsuccess_protol_fontsize" >

                </TextView>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/acrivity_depositsuccess_ll4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/activity_depositsuccess_button"
                android:layout_width="@dimen/activity_depositsuccess_buttonwidth"
                android:layout_height="@dimen/activity_depositsuccess_buttonheight"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="@dimen/activity_depositsuccess_buttonmargin"
                android:layout_marginRight="@dimen/activity_depositsuccess_buttonmargin"
                android:background="@color/activity_depositsuccess_button"
                android:text="@string/activity_depositsuccess_confirm"
                android:textColor="@color/activity_deposit_item_whitefont"
                android:textSize="@dimen/activity_deposit_button_fontsize" >

            </Button>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>